# sat_is_factory

./: .gitignore  README.md  package.sh  pyproject.toml  trains.py
.github/workflows/: python-package.yml
src/sat_is_factory/: __init__.py  util.py  z3_ext.py
src/sat_is_factory/train_solver/: __init__.py  __main__.py  train_solver.py
tests/: test_train_solver.py
