[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sat_is_factory"
version = "0.1.0"
description = "Solver(s) for Satisfactory"
authors = [{ name = "Nathan Lilienthal", email = "nathan@nixpulvis.com" }]
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "z3-solver>=4.15",
]
